Fix T102684: GPencil Crash when trying to sculpt with Dot Dash

The problem was the original pointer was not set.

There is a technical limitation with dots of 1 point
because it cannot assign orig pointer.