source/blender/gpencil_modifiers/intern/MOD_gpencildash.c
@@ -146,6 +146,7 @@ static bool stroke_dash(const bGPDstroke *gps,
 
     bGPDstroke *stroke = BKE_gpencil_stroke_new(
         ds->mat_nr < 0 ? gps->mat_nr : ds->mat_nr, size, gps->thickness);
+    stroke->runtime.gps_orig = gps->runtime.gps_orig;
     if (ds->flag & GP_DASH_USE_CYCLIC) {
       stroke->flag |= GP_STROKE_CYCLIC;
     }
@@ -157,6 +158,9 @@ static bool stroke_dash(const bGPDstroke *gps,
       stroke->points[is].z = p->z;
       stroke->points[is].pressure = p->pressure * ds->radius;
       stroke->points[is].strength = p->strength * ds->opacity;
+      /* Assign original point pointers. */
+      stroke->points[is].runtime.idx_orig = p->runtime.idx_orig;
+      stroke->points[is].runtime.pt_orig = p->runtime.pt_orig;
       copy_v4_v4(stroke->points[is].vert_color, p->vert_color);
     }
     BLI_addtail(r_strokes, stroke);
